--- a/basic_gan.ipynb
+++ b/basic_gan.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,14 +104,11 @@
     "# torch.log()\n",
     "\n",
     "def discriminator_loss(D_of_real, D_of_fake):\n",
-    "    # TODO: implment loss for discriminator\n",
-    "    # What sign should be applied in order to maximize it?\n",
-    "    raise NotImplementedError()\n",
+    "    return torch.mean(torch.log(D_of_real) + torch.log(1 - D_of_fake))\n",
+    "\n",
     "\n",
     "def generator_loss(D_of_fake):\n",
-    "    # TODO: implment loss for generator\n",
-    "    # What sign should be applied in order to maximize or minimize it?\n",
-    "    raise NotImplementedError()"
+    "    return torch.mean(torch.log(1 - D_of_fake))"
    ]
   },
   {
@@ -124,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +130,7 @@
     "        super(Generator, self).__init__()\n",
     "        \n",
     "        # Calculate the size of the final output vector\n",
-    "        flattened_out_size = 1\n",
+    "        flattened_output_size = 1\n",
     "        for dim in img_shape:\n",
     "            flattened_output_size *= dim\n",
     "\n",
@@ -141,7 +138,7 @@
     "        self.model = nn.Sequential(\n",
     "            # Layer 1\n",
     "            # TODO: what should the first network input size be?\n",
-    "            nn.Linear(???, 128),\n",
+    "            nn.Linear(nz, 128),\n",
     "            nn.LeakyReLU(0.2, inplace=True),\n",
     "            \n",
     "            # Layer 2\n",
@@ -154,15 +151,23 @@
     "            # TODO: add a fully connected layer with input size 256 and output 512\n",
     "            # TODO: add batchnorm\n",
     "            # TODO: add activation\n",
+    "            nn.Linear(256,512),\n",
+    "            nn.BatchNorm1d(512),\n",
+    "            nn.LeakyReLU(0.2, inplace=True),\n",
     "            \n",
     "            # Layer 4\n",
     "            # TODO: add a fully connected layer with input size 512 and output 1024\n",
     "            # TODO: add batchnorm\n",
     "            # TODO: add activation\n",
     "            \n",
+    "            nn.Linear(512,1024),\n",
+    "            nn.BatchNorm1d(1024),\n",
+    "            nn.LeakyReLU(0.2, inplace=True),\n",
+    "            \n",
+    "            \n",
     "            # Final Layer\n",
     "            # Map to desired image size\n",
-    "            nn.Linear(1024, flattened_output_size)\n",
+    "            nn.Linear(1024, flattened_output_size),\n",
     "            nn.Tanh(),\n",
     "        )\n",
     "        \n",
@@ -184,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,6 +205,9 @@
     "            # TODO: add batch norm\n",
     "            # TODO: add activation\n",
     "            \n",
+    "            nn.Linear(512,256),\n",
+    "            nn.BatchNorm1d(256),\n",
+    "            \n",
     "            nn.Linear(256, 1),\n",
     "            nn.Sigmoid()\n",
     "        )\n",
@@ -211,9 +219,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generator(\n",
+      "  (model): Sequential(\n",
+      "    (0): Linear(in_features=100, out_features=128, bias=True)\n",
+      "    (1): LeakyReLU(negative_slope=0.2, inplace=True)\n",
+      "    (2): Linear(in_features=128, out_features=256, bias=True)\n",
+      "    (3): BatchNorm1d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "    (4): LeakyReLU(negative_slope=0.2, inplace=True)\n",
+      "    (5): Linear(in_features=256, out_features=512, bias=True)\n",
+      "    (6): BatchNorm1d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "    (7): LeakyReLU(negative_slope=0.2, inplace=True)\n",
+      "    (8): Linear(in_features=512, out_features=1024, bias=True)\n",
+      "    (9): BatchNorm1d(1024, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "    (10): LeakyReLU(negative_slope=0.2, inplace=True)\n",
+      "    (11): Linear(in_features=1024, out_features=784, bias=True)\n",
+      "    (12): Tanh()\n",
+      "  )\n",
+      ")\n",
+      "Discriminator(\n",
+      "  (model): Sequential(\n",
+      "    (0): Linear(in_features=784, out_features=512, bias=True)\n",
+      "    (1): LeakyReLU(negative_slope=0.2, inplace=True)\n",
+      "    (2): Linear(in_features=512, out_features=256, bias=True)\n",
+      "    (3): BatchNorm1d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "    (4): Linear(in_features=256, out_features=1, bias=True)\n",
+      "    (5): Sigmoid()\n",
+      "  )\n",
+      ")\n"
+     ]
+    }
+   ],
    "source": [
     "# Create generator and move it to the GPU, if available\n",
     "gen_model = Generator().to(device)\n",
@@ -237,11 +279,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0/10][0/937]\n",
+      "[0/10][100/937]\n",
+      "[0/10][200/937]\n",
+      "[0/10][300/937]\n",
+      "[0/10][400/937]\n",
+      "[0/10][500/937]\n",
+      "[0/10][600/937]\n",
+      "[0/10][700/937]\n",
+      "[0/10][800/937]\n",
+      "[0/10][900/937]\n",
+      "[1/10][0/937]\n",
+      "[1/10][100/937]\n",
+      "[1/10][200/937]\n",
+      "[1/10][300/937]\n",
+      "[1/10][400/937]\n",
+      "[1/10][500/937]\n",
+      "[1/10][600/937]\n",
+      "[1/10][700/937]\n",
+      "[1/10][800/937]\n",
+      "[1/10][900/937]\n",
+      "[2/10][0/937]\n",
+      "[2/10][100/937]\n",
+      "[2/10][200/937]\n",
+      "[2/10][300/937]\n",
+      "[2/10][400/937]\n",
+      "[2/10][500/937]\n",
+      "[2/10][600/937]\n",
+      "[2/10][700/937]\n",
+      "[2/10][800/937]\n",
+      "[2/10][900/937]\n",
+      "[3/10][0/937]\n",
+      "[3/10][100/937]\n",
+      "[3/10][200/937]\n",
+      "[3/10][300/937]\n",
+      "[3/10][400/937]\n",
+      "[3/10][500/937]\n",
+      "[3/10][600/937]\n",
+      "[3/10][700/937]\n",
+      "[3/10][800/937]\n",
+      "[3/10][900/937]\n",
+      "[4/10][0/937]\n",
+      "[4/10][100/937]\n",
+      "[4/10][200/937]\n",
+      "[4/10][300/937]\n",
+      "[4/10][400/937]\n",
+      "[4/10][500/937]\n",
+      "[4/10][600/937]\n",
+      "[4/10][700/937]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-25-ee8eb514ba6b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     35\u001b[0m         \u001b[0mD_fake\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdisc_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfake_imgs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m         \u001b[0mgen_err\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgenerator_loss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mD_fake\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 37\u001b[0;31m         \u001b[0mgen_err\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     38\u001b[0m         \u001b[0mgen_opt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     39\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/torch/tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, gradient, retain_graph, create_graph)\u001b[0m\n\u001b[1;32m    193\u001b[0m                 \u001b[0mproducts\u001b[0m\u001b[0;34m.\u001b[0m \u001b[0mDefaults\u001b[0m \u001b[0mto\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    194\u001b[0m         \"\"\"\n\u001b[0;32m--> 195\u001b[0;31m         \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    196\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    197\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mregister_hook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/torch/autograd/__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables)\u001b[0m\n\u001b[1;32m     97\u001b[0m     Variable._execution_engine.run_backward(\n\u001b[1;32m     98\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrad_tensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 99\u001b[0;31m         allow_unreachable=True)  # allow_unreachable flag\n\u001b[0m\u001b[1;32m    100\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    101\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "g_losses = []\n",
     "d_losses = []\n",
@@ -260,14 +370,14 @@
     "        #\n",
     "        # TODO: compute D(x)\n",
     "        #\n",
-    "        D_real = ???\n",
+    "        D_real = disc_model.forward(real_imgs)\n",
     "               \n",
     "        # Run D on generated fake images\n",
     "        z_sample = torch.randn(batch_size, nz, device=device)\n",
     "        #\n",
     "        # TODO: compute G(z)\n",
     "        #\n",
-    "        fake_imgs = ???\n",
+    "        fake_imgs = gen_model.forward(z_sample)\n",
     "        D_fake = disc_model(fake_imgs.detach())\n",
     "\n",
     "        # Compute D's loss and update D's weights\n",
@@ -366,7 +476,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
